`mvn javafx:run` works