@@ -9,25 +9,86 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <maven.compiler.release>11</maven.compiler.release>
+    <javafx.version>15.0.1</javafx.version>
+    <micronaut.version>2.1.2</micronaut.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>central</id>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+    <repository>
+      <id>jcenter.bintray.com</id>
+      <url>https://jcenter.bintray.com</url>
+    </repository>
+    <repository>
+      <id>bintray.supernautapp</id>
+      <url>https://dl.bintray.com/supernautapp/maven</url>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>15.0.1</version>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>app.supernaut</groupId>
+	    <artifactId>supernaut-fx</artifactId>
+	    <version>0.1.0</version>
+	    <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>app.supernaut</groupId>
+	    <artifactId>supernaut-fx-micronaut</artifactId>
+	    <version>0.1.0</version>
+	    <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.micronaut</groupId>
+      <artifactId>micronaut-inject</artifactId>
+	    <version>${micronaut.version}</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.code.findbugs</groupId>
+          <artifactId>jsr305</artifactId>
+        </exclusion>
+      </exclusions>
+
     </dependency>
   </dependencies>
   <build>
     <plugins>
+<!--      <plugin>-->
+<!--        <groupId>io.micronaut.build</groupId>-->
+<!--        <artifactId>micronaut-maven-plugin</artifactId>-->
+<!--        <version>${micronaut.version}</version>-->
+<!--      </plugin>-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <release>${maven.compiler.release}</release>
+          <debug>true</debug>
+          <debuglevel>lines,vars,source</debuglevel>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>io.micronaut</groupId>
+              <artifactId>micronaut-inject-java</artifactId>
+              <version>${micronaut.version}</version>
+            </path>
+          </annotationProcessorPaths>
+          <compilerArgs>
+            <arg>-Amicronaut.processing.group=org.openjfx</arg>
+            <arg>-Amicronaut.processing.module=hellofx</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -35,7 +96,17 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.5</version>
         <configuration>
-          <mainClass>HelloFX</mainClass>
+          <mainClass>hellofx/app.supernaut.fx.sample.maven.HelloFX</mainClass>
+          <release>${maven.compiler.release}</release>
+          <runtimePathOption>MODULEPATH</runtimePathOption>
+          <options>
+            <option>--patch-module</option>
+            <option>java.annotation=jsr305-3.0.2.jar</option>
+            <option>--add-modules</option>
+            <option>app.supernaut.fx.micronaut</option>
+          </options>
+          <jlinkImageName>hellofx</jlinkImageName>
+          <launcher>launcher</launcher>
         </configuration>
       </plugin>
     </plugins>
